--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,8 @@
 # Get these values from your Supabase project settings
 NEXT_PUBLIC_SUPABASE_URL=https://your-project.supabase.co
 NEXT_PUBLIC_SUPABASE_ANON_KEY=your-anon-key-here
+
+react_PUBLIC_SUPABASE_URL=https://your-project.supabase.co
+react_PUBLIC_SUPABASE_ANON_KEY=your-anon-key-here
+
+
