--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-supabase_url: db.hhgmgvhrmebkiscphirp.supabase.io
+SUPABASE_URL=https://hhgmgvhrmebkiscphirp.supabase.co
+SUPABASE_PUBLISHABLE_DEFAULT_KEY=sb_publishable_A1YuXRS3Gg-GOgmq2p8dmg_sXi_ouEc
